--- a/src/styles/Listings.module.css
+++ b/src/styles/Listings.module.css
@@ -38,7 +38,7 @@
   justify-content: space-between;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1024px) {
   .list {
     width: 300px;
     height: calc(100vh - 80px);
